<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="16dp">

            <com.google.mlkit.vision.demo.GraphicOverlay
                android:id="@+id/graphic_overlay"
                android:layout_width="80dp"
                android:layout_height="80dp"/>

            <ImageButton
                android:id="@+id/crime_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"
                android:contentDescription="@string/crime_photo_button_description" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:text="@string/crime_title_label" />

            <EditText
                android:id="@+id/crime_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:hint="@string/crime_title_hint"
                android:inputType="text" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/crime_details_label" />

    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed May 11 11:56 EST 2022" />

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label" />

    <Button
        android:id="@+id/crime_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_suspect_text"/>

    <Button
        android:id="@+id/crime_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_report_text"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/previous_images"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.mlkit.vision.demo.GraphicOverlay
            android:id="@+id/crime_photo_2"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:cropToPadding="true"
            android:background="@color/white"
            android:contentDescription="@string/crime_photo_no_image_description" />

        <com.google.mlkit.vision.demo.GraphicOverlay
            android:id="@+id/crime_photo_3"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:cropToPadding="true"
            android:background="@color/white"
            android:contentDescription="@string/crime_photo_no_image_description" />

        <com.google.mlkit.vision.demo.GraphicOverlay
            android:id="@+id/crime_photo_4"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:cropToPadding="true"
            android:background="@color/white"
            android:contentDescription="@string/crime_photo_no_image_description" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/enableFaceDetection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/enableFaceDetectionLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Enable Face Detection" />

        <TextView
            android:id="@+id/numFaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/enableContourDetection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/enableContourDetectionLabel"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:text="Enable Contour Detection" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

            <CheckBox
                android:id="@+id/enableSelfieSegmentation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/enableSelfieSegmentationLabel"
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:text="@string/enable_selfie_segmentation" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/enableMeshDetection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/enableMeshDetection1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_mesh_detection" />
    </LinearLayout>


</LinearLayout>
